--- a/deployment.yaml
+++ b/deployment.yaml
@@ -1,43 +1,39 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  annotations:
-    deployment.kubernetes.io/revision: "1"
-  creationTimestamp: "2023-10-24T14:19:10Z"
-  generation: 1
+  creationTimestamp: null
   labels:
-    app: petowner-deployment
-  name: petowner-deployment
-  namespace: default
-  resourceVersion: "2354"
-  uid: d6ce3984-aa77-41a9-96a1-e4dbb7151413
+    app: pet-owner
+  name: pet-owner
+  namespace: pet-owner
 spec:
-  progressDeadlineSeconds: 600
   replicas: 1
-  revisionHistoryLimit: 10
   selector:
     matchLabels:
-      app: petowner-deployment
-  strategy:
-    rollingUpdate:
-      maxSurge: 25%
-      maxUnavailable: 25%
-    type: RollingUpdate
+      app: pet-owner
+  strategy: {}
   template:
     metadata:
       creationTimestamp: null
       labels:
-        app: petowner-deployment
+        app: pet-owner
     spec:
       containers:
-      - image: ayadinou/tp_devops_spring_boot_app:1.0.0
+      - image: ayadinou/tp_devops_spring_boot_app
+        name: tp-devops-spring-boot-app-xx2gf
         imagePullPolicy: IfNotPresent
-        name: tp-devops-spring-boot-app-rvdw2
-        resources: {}
-        terminationMessagePath: /dev/termination-log
-        terminationMessagePolicy: File
-      dnsPolicy: ClusterFirst
-      restartPolicy: Always
-      schedulerName: default-scheduler
-      securityContext: {}
-      terminationGracePeriodSeconds: 30
+        env:
+          - name: DATABASE_HOST
+            value: "mysqldb-service"
+          - name: DATABASE_USER
+            value: "ayadinou"
+          - name: DATABASE_PASSWORD
+            value: "ayadinou1601"
+          - name: DATABASE_ROOT_PASSWORD
+            value: "ayainou1601"
+          - name: DATABASE_NAME
+            value: "pet_store"
+          - name: DATABASE_PORT
+            value: "3306"
+        ports:
+          - containerPort: 8080
